# shippable-python-scripts

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/ai/: smart_data_labeler.py  summarize_text.py
scripts/django/: backup_db.py  check_db_ready.py  collect_static.py  createsuperuser.py  deploy_to_heroku.py  migrate_and_test.py  restore_db.py
scripts/docker/: build_and_push_docker.py  setup_env.py
scripts/flask/: clean_db.py  init_db.py  run_server.py
scripts/general/: convert_csv_to_json.py
tests/: test_convert_csv_to_json.py  test_deploy_to_heroku.py  test_summarize_text.py
tests/ai/: test_ai_labeler.py  test_summarize_text.py
tests/django/: test_backup_restore.py  test_check_db_ready.py  test_deploy_to_heroku.py  test_django_collect_static.py  test_django_createsuperuser.py
tests/docker/: test_build_and_push_docker.py  test_setup_env.py
tests/flask/: test_auth_utils.py  test_clean_db.py  test_endpoints.py  test_init_db.py  test_run_server.py
tests/general/: test_convert_csv_to_json.py
